--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,13 +13,8 @@
 
     <nav class="navbar is-black" role="navigation" aria-label="dropdown navigation">
       <div class="navbar-brand">
-        <a class="navbar-item">
-          <img id="logo" src="https://toppng.com/public/uploads/thumbnail/icono-de-auto-covoiturage-logo-11563318871cussi74k8u.png" width="50" height="100">
-        </a>
-        <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
-          <span aria-hidden="true"></span>
+        <a class="navbar-item" style = "position:relative; left:20px; top:0.001px;">
+          <ion-icon size="large" name="car-sport"></ion-icon>
         </a>
       </div>
 
@@ -30,6 +25,13 @@
 
       <% if current_user %>
         <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-primary is-rounded is-outlined is-right" href='/articles'>
+                <h4 class="title is-4 has-text-primary"> Ayuda </h4>
+              </a>
+            </div>
+          </div>
           <div class="navbar-item has-dropdown is-hoverable is-black">
             <a class="navbar-link is-arrowless">
               <div style="border: 5px; width: 150px; padding: 10px;";>
@@ -52,6 +54,13 @@
         </div>
         <% else %>
         <div class="navbar-end">
+          <div class="navbar-item">
+            <div class="buttons">
+              <a class="button is-primary is-rounded is-outlined is-right" href='/articles'>
+                <h4 class="title is-4 has-text-primary"> Ayuda </h4>
+              </a>
+            </div>
+          </div>
           <div class="navbar-item has-dropdown is-hoverable is-black">
             <a class="navbar-link is-arrowless">
               <div style="border: 5px; width: 150px; padding: 10px;";>
@@ -72,5 +81,7 @@
     <br/>
     
     <%= yield %>
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
   </body>
 </html>
