--- a/app/views/turnos/index.html.erb
+++ b/app/views/turnos/index.html.erb
@@ -16,32 +16,24 @@
             <h3 class = "title is-4 has-text-dark" >Turnos Activos</h3>
         </div>
         <br/>
-        <div align='center' style="display: flex; flex-flow: wrap;">
-            <% @no_vacio = false %>
-            <div class="row">
-                <% @turnos.each do |turno|%>
-                    <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
-                        <div class="column-turno">
-                            <% @no_vacio = true %>
-                            <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                            <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                            <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                            <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                            <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                            <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
-                        </div>
+        <div class="row">
+            <div class="row_inner">
+                <div class="tile">
+                    <% @turnos.each do |turno|%>
+                        <%if turno.user_id != current_user.id and turno.estado == "ACTIVO"%>
+                            <div align='center' style="display: flex; flex-flow: wrap; ">
+                                <div class="column-turno">
+                                    <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                                    <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                                    <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                                    <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                                    <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                                    <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                                </div>
+                            </div>
+                        <% end %>
                     <% end %>
-                <% end %>
-                <% if not @no_vacio %>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                <% end %>
+                </div>
             </div>
         </div>
     </div>
@@ -53,36 +45,28 @@
             <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Confirmados</h3>
         </div>
         <br/>
-        <div align='center' style="display: flex; flex-flow: wrap; ">
-            <% @no_vacio = false %>
-            <div class="row">
-                <% @requests.each do |request|%>
-                    <%if request.user_id == current_user.id %>
-                        <% @turno = Turno.find(request.turno.id)%> 
-                        <%if @turno.estado == "CONFIRMADO"%>
-                            <div class="column-turno">
-                                <% @no_vacio = true %>
-                                <% @user = User.find(@turno.user_id)%>
-                                <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
-                                <b>Hora salida </b><p><%= turno.hora_salida%></p>
-                                <b>Día de la semana </b><p><%= turno.dia_semana%></p>
-                                <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
-                                <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
-                                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
-                            </div>
+        <div class="row">
+            <div class="row_inner">
+                <div class="tile">
+                    <% @requests.each do |request|%>
+                        <%if request.user_id == current_user.id %>
+                            <% @turno = Turno.find(request.turno.id)%> 
+                            <%if @turno.estado == "CONFIRMADO"%>
+                                <div align='center' style="display: flex; flex-flow: wrap; ">
+                                    <div class="column-turno">
+                                        <% @user = User.find(@turno.user_id)%>
+                                        <b>Conductor </b><p><%= @users.find(turno.user_id).name%></p>
+                                        <b>Hora salida </b><p><%= turno.hora_salida%></p>
+                                        <b>Día de la semana </b><p><%= turno.dia_semana%></p>
+                                        <b>Dirección salida </b><p><%= turno.direccion_salida%></p>
+                                        <b>Dirección llegada </b><p><%= turno.direccion_llegada%></p>
+                                        <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => turno.id) %></p>
+                                    </div>
+                                </div>
+                            <% end %>
                         <% end %>
                     <% end %>
-                <% end %>
-                <% if not @no_vacio %>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                <% end %>
+                </div>
             </div>
         </div>
     </div>
@@ -94,35 +78,27 @@
             <h3 class = "title is-4 has-text-dark" >Turnos Solicitados Completados</h3>
         </div>
         <br/>
-        <div align='center' style="display: flex; flex-flow: wrap; ">
-            <% @no_vacio = false %>
-            <div class="row">
-                <% @requests.each do |request|%>
-                    <%if request.user_id == current_user.id %>
-                        <% @turno = Turno.find(request.turno.id)%> 
-                        <%if @turno.estado == "COMPLETADO"%>
-                            <% @no_vacio = true %>
-                            <div class="column-turno">
-                                <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
-                                <b>Hora salida </b><p><%= @turno.hora_salida%></p>
-                                <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
-                                <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
-                                <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
-                                <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
-                            </div>
+        <div class="row">
+            <div class="row_inner">
+                <div class="tile">
+                    <% @requests.each do |request|%>
+                        <%if request.user_id == current_user.id %>
+                            <% @turno = Turno.find(request.turno.id)%> 
+                            <%if @turno.estado == "COMPLETADO"%>
+                                <div align='center' style="display: flex; flex-flow: wrap; ">
+                                    <div class="column-turno">
+                                        <b>Conductor </b><p><%= @users.find(@turno.user_id).name%></p>
+                                        <b>Hora salida </b><p><%= @turno.hora_salida%></p>
+                                        <b>Día de la semana </b><p><%= @turno.dia_semana%></p>
+                                        <b>Dirección salida </b><p><%= @turno.direccion_salida%></p>
+                                        <b>Dirección llegada </b><p><%= @turno.direccion_llegada%></p>
+                                        <b></b><p><%= link_to 'Ver detalles', turnos_show_path(:id => @turno.id) %></p>
+                                    </div>
+                                </div>
+                            <% end %>
                         <% end %>
                     <% end %>
-                <% end %>
-                <% if not @no_vacio %>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                    <br/>
-                <% end %>
+                </div>
             </div>
         </div>
     </div>
